<resources>
    <string name="app_name">OLX</string>
    <string name="Description">Description</string>
    <string name="phone">Phone</string>
    <string name="title_activity_home">OLX</string>

    <string name="navigation_drawer_open">OLX</string>
    <string name="navigation_drawer_close">Select item</string>

    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="price">Price: </string>
    <string name="location">Location: </string>
    <string name="state">State: </string>
    <string name="call">Call</string>
    <string name="msg">MSG</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="please_enter_location">Please enter location</string>

    <string-array name="State">
        <item>USED</item>
        <item>NEW</item>
    </string-array>

    <string-array name="Categories">
        <item>Real estate</item>
        <item>Cars and parts</item>
        <item>Electronics</item>
        <item>Sport, hobby and books</item>
        <item>Animals</item>
        <item>Home and garden</item>
        <item>Fashion</item>
        <item>Baby and children</item>
    </string-array>
    <string-array name="Real_estate">
        <item>Sales</item>
        <item>Rent</item>
        <item>Roommates</item>
        <item>Overseas properties</item>
        <item>Nights</item>
    </string-array>
    <string-array name="Cars_and_parts">
        <item>Cars</item>
        <item>Bikes and ATB</item>
        <item>Car accessories</item>
        <item>Tyres and rims</item>
        <item>Bus and truck</item>
        <item>Trailers</item>
        <item>Agro and building</item>
        <item>Boats and caravans</item>
        <item>Service</item>
    </string-array>
    <string-array name="Electronics">
        <item>Computers</item>
        <item>Computer parts and accessories</item>
        <item>Tablets and readers</item>
        <item>Smartphones</item>
        <item>Accessories and parts for phones</item>
        <item>TV</item>
        <item>Audio</item>
        <item>Appliances</item>
        <item>Air conditioners</item>
        <item>Photo and video</item>
        <item>Navigation</item>
        <item>Other electronics</item>
    </string-array>
    <string-array name="Sport_hobby_books">
        <item>Sport</item>
        <item>Fishing, camping and tourism</item>
        <item>Books</item>
        <item>Music</item>
        <item>Movies</item>
        <item>Antiques and collections</item>
        <item>Musical instruments</item>
        <item>Electronical smokes and hookah</item>
        <item>Tickets and events</item>
        <item>Games</item>
    </string-array>
    <string-array name="Animals">
        <item>Dogs</item>
        <item>Cats</item>
        <item>Fish</item>
        <item>Birds</item>
        <item>Farm animals</item>
        <item>Other pets</item>
        <item>Other animals</item>
        <item>Pet accessories</item>
        <item>Searching for parner</item>
    </string-array>
    <string-array name="Home_garden">
        <item>Furniture</item>
        <item>Do it yourself!</item>
        <item>Arts and decorations</item>
        <item>Home</item>
        <item>Curtains and carpets</item>
        <item>Lightning</item>
        <item>Sleepwear and fabric</item>
        <item>Garden</item>
        <item>Everything for cleaning</item>
        <item>Custom furniture</item>
        <item>Foods, addons and drinks</item>
        <item>Wheel chairs and other</item>
        <item>Home and garden other</item>
    </string-array>
    <string-array name="Fashion">
        <item>Clothes</item>
        <item>Shoes</item>
        <item>Fashion accessories</item>
        <item>Sport, hobby and books</item>
        <item>Perfumes and cosmetics</item>
        <item>Jewelery</item>
        <item>Watches</item>
    </string-array>
    <string-array name="Baby_Children">
        <item>Baby and children clothes</item>
        <item>Baby and children shoes</item>
        <item>Baby and child strolls</item>
        <item>Toys</item>
        <item>Furniture for child</item>
        <item>Baby and children accessories</item>
        <item>Goods for twins</item>
        <item>Baby and children other</item>
    </string-array>
    <string name="title_activity_message">MessageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_home">Home</string>
    <string name="messages">Messages</string>
    <string name="add_offer">Add offer</string>
    <string name="settings">Settings</string>
    <string name="account_information">Account information</string>
    <string name="log_out">Log out</string>
    <string name="home">Messages</string>
    <string name="home_messages">Messages</string>
    <string name="add_offer_home">Add offer</string>
    <string name="information_for_application">Information for application</string>
    <string name="your_profile_is">Your profile is:</string>
    <string name="msg_type">Type:</string>
    <string name="msg_user">User:</string>
    <string name="msg_title">Title:</string>
    <string name="created_from_aydun_iliqn_and_marto">Created from : Aydun,Iliqn and Marto</string>
    <string name="app_version">Version: Beta v.1</string>
    <string name="info_olx_app">Information for OLX android program</string>
    <string name="username_info">Username:</string>
    <string name="name_info">Name:</string>
    <string name="address_info">Address:</string>
    <string name="email_info">Email:</string>
    <string name="phone_info">Phone:</string>
    <string name="change_phone">Change phone</string>
    <string name="change_address">Change Address</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_msg">Send</string>
    <string name="username_reg">Username</string>
    <string name="name_reg">Name</string>
    <string name="password_reg">Password</string>
    <string name="password_again_reg">Password again</string>
    <string name="email_reg">Email</string>
    <string name="address_reg">Address</string>
    <string name="phone_number_reg">Phone number</string>
    <string name="register_reg">Register</string>
    <string name="title_msg_prev">Title:</string>
    <string name="user_msg_prev">User:</string>
    <string name="descr_msg_prev">Description</string>
    <string name="change_address_txt">Change address</string>
    <string name="new_address_change">New Address</string>
    <string name="change_email_txt">Change email</string>
    <string name="old_email_change">Old Email</string>
    <string name="new_email_change">New Email</string>
    <string name="submit">Submit</string>
    <string name="change_password_txt">Change password</string>
    <string name="old_password_change">Old Password</string>
    <string name="new_password_change">New Password</string>
    <string name="new_phone_number">New phone number</string>
    <string name="change_phone_txt">Change phone</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="log_in_olx">Log in</string>
    <string name="register_log">Register</string>

</resources>
