<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/user_home"
            android:icon="@drawable/offer_for_u"
            android:title="@string/user_home" />


        <item
            android:id="@+id/nav_user_messages"
            android:icon="@drawable/msg"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_user_add_offer"
            android:icon="@drawable/plus"
            android:title="@string/add_offer" />
    </group>


    <group>

        <item
            android:id="@+id/nav_user_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/info"
            android:title="@string/account_information" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />
    </group>

</menu>
