<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="com.example.pc.olx.Shop.InformationHomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_olx_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/created_from_aydun_iliqn_and_marto"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center"/>







</LinearLayout>
