<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".User.LoginActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/imageView"
        android:src="@drawable/olx"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/editTxtUsernameLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/username_login"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editTxtPasswordLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"

        android:inputType="textPassword"
        android:hint="@string/password_login"
        android:paddingTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonLogin"
            android:text="@string/log_in_olx"
            android:textColor="@android:color/black"
            android:layout_marginRight="10dp"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:layout_width="0dp"/>


        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register_log"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:layout_width="0dp"/>

    </LinearLayout>


</LinearLayout>
