<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreviewMessageActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:text="@string/title_msg_prev"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/titleOfMessageTV"
                    android:layout_width="0dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:text="@string/user_msg_prev"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/userNameTV"
                    android:layout_width="0dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>

            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/descr_msg_prev"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/descriptionOfMessageTV"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
